# ace-artillery

./: CMakeLists.txt  Data.cpp  Data.h  Gun.cpp  Gun.h  Mil.cpp  Mil.h  Process.cpp  Process.h  dependencies.h  main.cpp
entries/: param_entries_eng.txt  param_entries_eng_short.txt  param_entries_rus.txt  param_entries_rus_short.txt  target_types_eng.txt  target_types_rus.txt
libs/: rapidcsv.h
object_data/guns/: gun1.txt  gun2.txt  gun3.txt  gun4.txt  gun5.txt  gun6.txt
object_data/parameters/: params_tgt_1_for_gun_10.txt  params_tgt_1_for_gun_11.txt  params_tgt_1_for_gun_12.txt  params_tgt_1_for_gun_13.txt  params_tgt_1_for_gun_14.txt  params_tgt_1_for_gun_15.txt  params_tgt_1_for_gun_16.txt  params_tgt_1_for_gun_7.txt  params_tgt_1_for_gun_8.txt  params_tgt_1_for_gun_9.txt  params_tgt_2_for_gun_10.txt  params_tgt_2_for_gun_11.txt  params_tgt_2_for_gun_12.txt  params_tgt_2_for_gun_13.txt  (+46 more)
obsolete/: obsolete.h
tables/: ballistic-table-d30-of462-1st-mortar.csv  ballistic-table-d30-of462-1st.csv  ballistic-table-d30-of462-2nd-mortar.csv  ballistic-table-d30-of462-2nd.csv  ballistic-table-d30-of462-3rd-mortar.csv  ballistic-table-d30-of462-3rd.csv  ballistic-table-d30-of462-4th-mortar.csv  ballistic-table-d30-of462-4th.csv  ballistic-table-d30-of462-full-mortar.csv  ballistic-table-d30-of462-full.csv  ballistic-table-d30-of462-reduced-mortar.csv  ballistic-table-d30-of462-reduced.csv  minimum-distance-d30-1st.csv  minimum-distance-d30-2nd.csv  minimum-distance-d30-3rd.csv  minimum-distance-d30-4th.csv  minimum-distance-d30-full.csv  minimum-distance-d30-reduced.csv
(+10 files in other folders)
